feat: User Service refactored